CSS: Make compatible with the FAQ

--- a/org.css
+++ b/org.css
@@ -10,6 +10,7 @@
 	background-repeat: no-repeat;
 	background-position: 10px 10px;
 	line-height:1.2em;
+        border-style:none;
   }
 
   h1 {font-size: 14pt;}
