Use Javascript hack for IE to fix table of contents
Patch by Sebastian Rose

--- a/org.css
+++ b/org.css
@@ -678,8 +678,12 @@
 {
   position: absolute;
   width:200px;
+  /*
+    The evil IE-JavaScript hack :-) depends on Picture and y-distance.
+    Added to support small screens (Netbooks...).
+    */
+  height: expression((document.body.clientHeight - 210) + "px");
 }
-
 
 * html h1
 {
