--- a/org.css
+++ b/org.css
@@ -5,7 +5,7 @@
 	font-family: Verdana, Helvetica, sans-serif;
 	font-size: 11pt;
 	text-align: left;
-	background-image: url(img/nrocinu2.jpg);
+	background-image: url(img/org-mode-unicorn.png);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: 10px 10px;
