--- a/org.css
+++ b/org.css
@@ -13,7 +13,7 @@
   }
 
   .logo-link {
-        position: absolute;
+        position: fixed;
         top: 0px;
         left: 0px;
         width: 190px;
