--- a/org.css
+++ b/org.css
@@ -88,6 +88,7 @@ body {
 h1.title {
     text-shadow: 2px 2px 4px #999;
     padding-top: 23px;
+    padding-left: 30pt;
     font-size: 23pt;
     font-family: Courier New;
 }
