--- a/org.css
+++ b/org.css
@@ -181,6 +181,22 @@ pre {
     padding-bottom: 5pt;
 }
 
+.outline-3 {
+    position: relative;
+    left: 215px;
+    top: 105px;
+    width: 75%;
+    padding-bottom: 5pt;
+}
+
+.outline-4 {
+    position: relative;
+    left: 215px;
+    top: 105px;
+    width: 75%;
+    padding-bottom: 5pt;
+}
+
 #twit {
     -moz-opacity:.2;
     opacity: .2;
@@ -205,7 +221,7 @@ pre {
 }
 
 #outline-container-1 {
-    padding-top: 10pt;
+    padding-top: 5pt;
 }
 
 .outline-2 h2 {
