Use % and a class for the copyright text.

--- a/org.css
+++ b/org.css
@@ -26,6 +26,10 @@ body {
     text-align: center;
 }
 
+.copyright {
+    font-size: 30%;
+}
+
 #orgquote {
     position: absolute;
     display: block;
