--- a/org.css
+++ b/org.css
@@ -7,7 +7,7 @@ html {
 body {
     font-family: "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", Verdana, sans-serif;
     font-size: 11pt;
-    line-height: 1.3;
+    line-height: 1.3em;
     margin: 0;
     padding: 0;
 }
@@ -28,7 +28,7 @@ body {
 
 .copyright {
     font-size: 70%;
-    line-height: 0.7;
+    line-height: 0.7em;
     color: #BBB;
 }
 
