First pass to prepare the v3

--- a/org.css
+++ b/org.css
@@ -1,400 +1,24 @@
-/* @import url(http://fonts.googleapis.com/css?family=Iceland); */
-
 html {
     padding: 0;
+    margin: 0;
 }
 
 body {
-    font-family: "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", Verdana, sans-serif;
-    font-size: 11pt;
-    line-height: 1.3em;
-    margin: 0;
-    padding: 0;
+    margin: 100px 50px 100px 50px;
 }
 
-.title {
-    position: absolute;
-    display: inline;
-    left: 0px;
-    top: 0px;
-    height: 54px;
-    width: 100%;
-    margin-top: 0px;
-    background-color: #eee;
-    padding: 0;
-    z-index: 99;
-    text-align: center;
-}
-
-.copyright {
-    font-size: 70%;
-    line-height: 0.7em;
-    color: #BBB;
-}
-
-#orgquote {
-    position: absolute;
-    display: block;
-    top: 77px;
-    padding: 5pt;
-    text-align: center;
-    background-color: black;
-    width: 100%;
-    color: #ccc;
-    box-shadow: 0px 15px 10px #fff;
-    font-size: 90%;
-    font-family: Courier new;
-    z-index: 98;
-}
-
-#paypal a {
-    font-family: Courier new;
-    cursor: pointer;
-    color: white;
-    position:absolute;
-    display: block;
-    right: 10px;
-    top: 5px;
-    width: 120px;
-    height: 30px;
-    box-shadow: 5px 5px 5px #888;
-    -webkit-box-shadow: 5px 5px 5px #888;
-    -moz-box-shadow: 5px 5px 5px #888;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    background-color: #53e1e3;
-    font-weight: bold;
-    padding-top: 15px;
-}
-
-#paypal a:hover {
-    position:absolute;
-    display: block;
-    right: 9px;
-    top: 5px;
-    width: 120px;
-    height: 30px;
-    margin-top: 5px;
-    margin-left: 5px;
-    box-shadow: 0px 0px 0px #888;
-    -webkit-box-shadow: 0px 0px 0px #888;
-    -moz-box-shadow: 0px 0px 0px #888;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    background-color: #49f4f6;
-    font-weight: bold;
-    padding-top: 15px;
-}
-
-@media all {
-    #paypal {
-        position:absolute;
-        right: 10px;
-        top: 10px;
-        z-index: 100;
-        text-align: center;
-    }
-
-    h1.title {
-        text-shadow: 2px 2px 4px #999;
-        padding-top: 23px;
-        padding-left: 0pt;
-        font-size: 23pt;
-        font-family: Courier New;
-    }
-
-    #linklist
-    {
-        position: absolute;
-        font-size: 13pt;
-        font-family: Courier New;
-        padding-top: 0px;
-        padding-right: 0px;
-        top: 107px;
-        left: 0px;
-        margin-top: 0px;
-        width: 180px;
-        background-color: #fff;
-        color: black;
-        box-shadow: 8px 8px 12px #ccc;
-        -webkit-border-bottom-right-radius: 10px;
-        -moz-border-radius-bottomright: 10px;
-        z-index: 100;
-    }
-
-    #linklist a {
-        color: black;
-        font-weight: normal;
-        text-decoration: none;
-        display:block;
-        padding: 7pt;
-    }
-
-    #linklist ul {
-        margin: 0;
-        padding: 0;
-    }
-
-    #linklist li {
-        text-align: right;
-        margin: 0;
-    }
-
-    .timestamp {
-        font-family: Courier New;
-        color: #888888;
-    }
-
-    #linklist li:hover {
-        border-left: 7px solid #537d7b;
-    }
-
-    #twit {
-        /* -moz-opacity:.2; */
-        /* opacity: .2; */
-        /* filter:alpha(opacity=20); */
-        position: absolute;
-        top: 362px;
-        box-shadow: 8px 8px 12px #ccc;
-        -webkit-border-bottom-right-radius: 10px;
-        -moz-border-radius-bottomright: 10px;
-        z-index: 100;
-    }
-
-    .outline-2 {
-        position: relative;
-        top: 105px;
-        left: 215px;
-        width: 75%;
-        padding-bottom: 5pt;
-    }
-}
-
-@media all and (min-width: 1400px){
-    .title{
-        padding-left: 75pt;
-    }
-}
-
-@media all and (min-width: 650px){
-    .title{
-        background: url(http://orgmode.org/org-mode-unicorn.png) no-repeat 12px 5px;
-        background-color: #eee;
-    }
-}
-
-@media all and (max-width: 800px){
-    #paypal{
-        position: absolute;
-        top: 10px;
-        right: 5px;
-    }
-    #paypal a{
-        width: 60px;
-        font-size: 8pt;
-    }
-    #paypal a:hover {
-        width: 60px;
-        font-size: 8pt;
-    }
-}
-
-@media all and (max-width: 625px){
-    h1.title{
-        padding-left: 0pt;
-    }
-    #linklist{
-        width: 130px;
-    }
-    #linklist a{
-        font-size: 10pt;
-    }
-    #twit{
-        display: none;
-    }
-    .outline-2{
-        left: 145px;
-    }
-    #paypal{
-        position:absolute;
-        left: 5px;
-        top: 340px;
-        width: 100px;
-    }
-    #paypal a{
-        left: 5px;
-        width: 100px;
-    }
-    #paypal a:hover{
-        left: 5px;
-        width: 100px;
-    }
-}
-
-pre {
-    background-color: #eee;
-    box-shadow: 5px 5px 5px #888;
-    border: none;
-    padding: 5pt;
-    margin-bottom: 14pt;
-    color: black;
-    padding: 12pt;
-    font-family: Courier New;
-    font-size: 95%;
-    overflow: auto;
-}
-
-#buttons {
-    position: fixed;
-    bottom: 10px;
-    /* right: 20px; */
-    left: 20px;
-    z-index: 100;
-    width: 100px;
-}
-
-/* .ok { */
-/*     -moz-opacity:.2; */
-/*     opacity: .2; */
-/*     filter:alpha(opacity=20); */
-/* } */
-
-.ok {
-    -moz-opacity:1;
-    opacity: 1;
-    filter:alpha(opacity=100);
-}
-
-/* #twit:hover { */
-/*     -moz-opacity:1; */
-/*     opacity: 1; */
-/*     filter:alpha(opacity=100); */
-
-/*     position: absolute; */
-/*     top: 362px; */
-/*     box-shadow: 8px 8px 12px #ccc; */
-/*     z-index: 100; */
-/* } */
-
-#outline-container-1 {
-    padding-top: 3pt;
-}
-
-.outline-2 h2 {
-    font-family: Courier New;
-}
-
-.outline-2 h3 {
-    font-family: Courier New;
-}
-
-p {
-    margin-top: 0;
-    text-align: justify;
-}
-
-a:link {
-    font-weight: bold;
-    text-decoration: none;
-    color: #A34D32;
-}
-
-a:visited {
-    font-weight: normal;
-    text-decoration: none;
-    color: #6E2432;
-}
-
-a:hover, a:active {
-    text-decoration: none;
-    color: #537d7b;
-}
-
-dd {
-    text-align: justify;
-    margin-bottom: 14pt;
-}
-
-dt {
-    font-size: 110%;
-    font-family: Courier New;
-    color: #537d7b;
-    padding: 3px;
-    margin-bottom: 3px;
-}
-
-li {
-    margin: 10px;
-    text-align: justify;
-    list-style-image : url(http://orgmode.org/triangle.png);
-}
-
-#table-of-contents {
-    font-size: 9pt;
-    position: fixed;
-    right: 0em;
-    top: 0em;
-    background: white;
-    -webkit-box-shadow: 0 0 1em #777777;
-    -moz-box-shadow: 0 0 1em #777777;
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    text-align: right;
-    /* ensure doesn't flow off the screen when expanded */
-    max-height: 80%;
-    overflow: auto;
-    z-index: 200;
-}
-
-#table-of-contents h2 {
-    font-size: 9pt;
-    max-width: 8em;
-    font-weight: normal;
-    padding-left: 0.5em;
-    padding-top: 0.05em;
-    padding-bottom: 0.05em;
-}
-
-#table-of-contents ul {
-    margin-left: 14pt;
-    margin-bottom: 10pt;
-    padding: 0
-}
-
-#table-of-contents li {
-    padding: 0;
-    margin: 1px;
-    list-style: none;
-}
-
-#table-of-contents ul>:first-child {
-    color: blue;
-}
-
-#table-of-contents #text-table-of-contents {
+h1.title {
     display: none;
-    text-align: left;
 }
 
-#table-of-contents:hover #text-table-of-contents {
-    display: block;
-    padding: 0.5em;
-    margin-top: -1.5em;
+h2 {
+    display: none;
 }
 
-img.random {
-    max-width: 75%;
-    max-height: 380px;
-    margin-bottom: 10pt;
-    border: 1px solid black;
+#outline-container-1 { 
+    float: left; 
 }
 
-@media screen
-{
-  #table-of-contents {
+#outline-container-2 {
     float: right;
-    border: 1px solid #CCC;
-    max-width: 50%;
-    overflow: auto;
-  }
-} /* END OF @media screen */
+}
