--- a/org.css
+++ b/org.css
@@ -1,24 +1,41 @@
 html {
-    padding: 0;
     margin: 0;
 }
 
 body {
-    margin: 100px 50px 100px 50px;
+    padding: 20px;
+    margin-left: 50px;
+    margin-right: 30px;
+}
+
+#content {
+    font-size: 14pt;
 }
 
 h1.title {
     display: none;
 }
 
-h2 {
-    display: none;
+/* h2 { */
+/*     display: none; */
+/* } */
+
+.outline-2 {
+    font-size: 12pt;
+    margin-top: 70px;
+    min-height: 800px;
 }
 
-#outline-container-1 { 
-    float: left; 
+img {    
+    box-shadow: 5px 5px 5px #aaa;
+    margin-top: -35px;
 }
 
-#outline-container-2 {
-    float: right;
+iframe {
+    position: relative;
 }
+
+/* #postamble { */
+/*     clear: both; */
+/*     background: #cc9; */
+/* } */
