--- a/org.css
+++ b/org.css
@@ -27,12 +27,6 @@ html {
     text-align: right;
 }
 
-body {
-    padding: 20px;
-    margin-left: 50px;
-    margin-right: 30px;
-}
-
 a {
     text-decoration: none;
     color: #537d7b
@@ -113,7 +107,6 @@ h2 {
 }
 
 code {
-    font-size: 85%;
     background-color: #eeeeee;
     padding: 1pt;
     margin-right: 1pt;
@@ -159,4 +152,65 @@ code {
     text-decoration: none;
 }
 
+@media(min-width:1000px){
+    #screenshot {
+        float: right;
+        width: 500px;
+    }
+    #main-image {
+        float: right;
+        width: 500px;
+    }
+    body {
+        padding: 20px;
+        margin-left: 50px;
+        margin-right: 30px;
+    }
+}
+
+@media(min-width:800px) and (max-width:1000px){
+    #screenshot {
+        float: right;
+        width: 450px;
+    }
+    #main-image {
+        float: right;
+        width: 450px;
+    }
+}
+
+@media(min-width:850px) and (max-width:1000px){
+    body {
+        padding: 10px;
+        margin-left: 25px;
+        margin-right: 15px;
+    }
+}
+
+@media(max-width:800px){
+    #screenshot {
+        display: none;
+    }
+    #main-image {
+        display: none;
+    }
+}
+
+@media(max-width:800px){
+    code{
+        font-size: 85%;
+    }
+}
+
+@media(min-width:800px) and (max-width:900px){
+    code{
+        font-size: 75%;
+    }
+}
+
+@media(min-width:900px){
+    code{
+        font-size: 85%;
+    }
+}
 
