--- a/org-manual.css
+++ b/org-manual.css
@@ -1,11 +1,11 @@
-/* @import url(http://fonts.googleapis.com/css?family=Iceland); */
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono|Droid+Serif);
 
 html {
     padding: 0;
 }
 
 body { 
-    font-family: "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", Verdana, sans-serif;
+    font-family: "Droid Serif", "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", Verdana, sans-serif;
     font-size: 11pt;
     line-height: 1.3;
     margin: 40pt;
@@ -141,6 +141,7 @@ h1.title {
 
 pre {
     background-color: #eee;
+    font-family: "Droid Sans Mono";
     box-shadow: 5px 5px 5px #888;
     border: none;
     padding: 5pt;
@@ -224,18 +225,21 @@ p {
 a:link { 
     font-weight: bold; 
     text-decoration: none; 
-    color: #A34D32;
+    color: #FF0000;
+    /* color: #A34D32; */
 }
 
 a:visited { 
     font-weight: normal; 
     text-decoration: none; 
-    color: #6E2432;
+    color: #0066CC;
+    /* color: #6E2432; */
 }
 
 a:hover, a:active { 
-    text-decoration: none; 
-    color: #537d7b;
+    text-decoration: underline; 
+    color: #FF0000;
+    /* color: #537d7b; */
 }
 
 dd {
