--- a/org.css
+++ b/org.css
@@ -123,7 +123,14 @@ h2 {
 
 code {
     font-family: "Droid Sans Mono";
-    font-size: 110%;
+    background-color: #eeeeee;
+    padding: 2pt;
+    margin-right: 1pt;
+    box-shadow: 1px 1px 1px #aaa;
+}
+
+pre {
+    font-family: "Droid Sans Mono";
     background-color: #eeeeee;
     padding: 2pt;
     margin-right: 1pt;
