--- a/org.css
+++ b/org.css
@@ -131,8 +131,9 @@ code {
 
 pre {
     font-family: "Droid Sans Mono";
-    font-size: 90%;
+    font-size: .8em;
     font-weight: normal;
+    line-height: 1.2em;
     background-color: #eeeeee;
     padding: 2pt;
     margin-right: 1pt;
