Update Changes.org for Org 8.0
This is only a draft version, but it does contain the bulk
of the major changes in Org 8.0.

Details about the new export engine, the new export dispatcher
and export back-ends are not yet there.

--- a/org-changes.css
+++ b/org-changes.css
@@ -41,17 +41,17 @@ td {
 
 a {
     text-decoration: none;
-    color: #FF0000;
+    color: #1c3030;
     /* color: #537d7b */
 }
 a:visited {
     text-decoration: none;
-    color: #0066CC;
+    color: #5e251e;
     /* color: #98855b */
 }
 a:hover {
     text-decoration: underline;
-    color: #FF0000;
+    color: #3d696a;
     /* color: #a34d32 */
 }
 
