--- a/org.css
+++ b/org.css
@@ -41,18 +41,26 @@ html {
 
 a {
     text-decoration: none;
-    color: #0066CC;
+    color: #1c3030;
+    /* #0066CC; */
     /* color: #537d7b */
 }
 a:visited {
     text-decoration: none;
-    color: #FF0000;
+    color: #5e251e;
+    /* #FF0000; */
     /* color: #98855b */
 }
 a:hover {
     text-decoration: underline;
-    color: #0066CC;
+    color: #3d696a;
+    /* #0066CC; */
     /* color: #a34d32; */
+    /* #923a2e */
+    /* #5e251e */
+    /* #461c16 */
+    /* #3d696a */
+    /* #1c3030 */
 }
 
 #content {
