Fix #rackspace CSS

--- a/org.css
+++ b/org.css
@@ -11,6 +11,10 @@ html {
     font-size: 1.4em;
 }
 
+img#rackspace {
+    width: 200px;
+}
+
 #top2 {
     font-size:70%;
 }
@@ -248,6 +252,3 @@ pre {
         font-size: 85%;
     }
 }
-
-img#rackspace
-
