Comment out #rackspace CSS

--- a/org.css
+++ b/org.css
@@ -11,9 +11,9 @@ html {
     font-size: 1.4em;
 }
 
-img#rackspace {
-    width: 200px;
-}
+/* img#rackspace { */
+/*     width: 200px; */
+/* } */
 
 #top2 {
     font-size:70%;
