--- a/org-manual.css
+++ b/org-manual.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono|Droid+Serif);
+@import url(https://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono|Droid+Serif);
 
 html {
     padding: 0;
@@ -13,7 +13,7 @@ body {
 }
 
 .title {
-    background: url(http://orgmode.org/org-mode-unicorn.png) no-repeat 12px 5px;
+    background: url(https://orgmode.org/org-mode-unicorn.png) no-repeat 12px 5px;
     position: fixed;
     display: inline;
     left: 0px;
