--- a/org.css
+++ b/org.css
@@ -1,254 +1,209 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono|Droid+Serif);
-
 html {
-    margin: 0;
-    font: 300 .9em/1.6em "Droid Serif", "Open Sans", Cambria, Georgia, "DejaVu Serif", serif;
-}
+  margin: 0;
+  font: 300 .9em/1.6em "Droid Serif", "Open Sans", Cambria, Georgia, "DejaVu Serif", serif; }
 
 #top {
-    margin-top: 0pt;
-    padding-right: 10em;
-    font-size: 1.4em;
-}
+  margin-top: 0pt;
+  padding-right: 10em;
+  font-size: 1.4em; }
 
 #top2 {
-    font-size:70%;
-}
+  font-size: 70%; }
 
 #searchgmane {
-    margin-left: 10pt;
-}
+  margin-left: 10pt; }
 
 #logo {
-    position: absolute;
-    top: 12px;
-    left: 20px;
-}
+  position: absolute;
+  top: 12px;
+  left: 20px; }
 
 #translate {
-    position: absolute;
-    left: 30px;
-    top: 150px;
-}
+  position: absolute;
+  left: 30px;
+  top: 150px; }
 
 #buttons {
-    display:block;
-    font-size: 1.2em;
-    position:absolute;
-    top:20pt;
-    right:10pt;
-    text-align: right;
-    padding: .2em 1em;
-    background: #EEE;
-    border-radius: 10px;
-}
+  display: block;
+  font-size: 1.2em;
+  position: absolute;
+  top: 20pt;
+  right: 10pt;
+  text-align: right;
+  padding: .2em 1em;
+  background: #EEE;
+  border-radius: 10px; }
 
 a {
-    text-decoration: none;
-    /* color: #1c3030; */
-    /* #0066CC; */
-    /* color: #537d7b */
-}
+  text-decoration: none;
+  /* color: #1c3030; */
+  /* #0066CC; */
+  /* color: #537d7b */ }
+
 a:visited {
-    text-decoration: none;
-    /* color: #5e251e; */
-    /* #FF0000; */
-    /* color: #98855b */
-}
+  text-decoration: none;
+  /* color: #5e251e; */
+  /* #FF0000; */
+  /* color: #98855b */ }
+
 a:hover {
-    text-decoration: underline;
-    /* color: #3d696a; */
-    /* #0066CC; */
-    /* color: #a34d32; */
-    /* #923a2e */
-    /* #5e251e */
-    /* #461c16 */
-    /* #3d696a */
-    /* #1c3030 */
-}
+  text-decoration: underline;
+  /* color: #3d696a; */
+  /* #0066CC; */
+  /* color: #a34d32; */
+  /* #923a2e */
+  /* #5e251e */
+  /* #461c16 */
+  /* #3d696a */
+  /* #1c3030 */ }
 
 #content {
-    font-size: 1.2em;
-    margin-left: 130px;
-    line-height: 2em;
-}
+  font-size: 1.2em;
+  margin-left: 130px;
+  line-height: 2em; }
 
 #content p {
-    padding-right: 7pt;
-}
+  padding-right: 7pt; }
 
 h1.title {
-    display: none;
-}
+  display: none; }
 
 h3 {
-    display: none;
-}
+  display: none; }
 
 .outline-3 {
-    background-color: #eee;
-    color: black;
-    box-shadow: 1px 1px 1px #aaa;
-    padding: 5pt;
-    width: 27em;
-    font-size: 85%;
-    margin-top: 20pt;
-}
+  background-color: #eee;
+  color: black;
+  box-shadow: 1px 1px 1px #aaa;
+  padding: 5pt;
+  width: 27em;
+  font-size: 85%;
+  margin-top: 20pt; }
 
 .outline-3 p {
-    margin:3pt; 
-    padding:0;
-}
+  margin: 3pt;
+  padding: 0; }
 
 h2 {
-    display: block;
-    padding-top: 30px;
-    font-size: 1.8em;
-    margin-top: 0;
-    margin-bottom: 30pt;
-}
+  display: block;
+  padding-top: 30px;
+  font-size: 1.8em;
+  margin-top: 0;
+  margin-bottom: 30pt; }
 
 .outline-2 {
-    font-size: 1em;
-    line-height: 1.3em;
-    margin-top: 40px;
-    margin-left: -130px;
-    min-height: 600pt;
-}
+  font-size: 1em;
+  line-height: 1.3em;
+  margin-top: 40px;
+  margin-left: -130px;
+  min-height: 600pt; }
 
 *.outline-2 img {
-    box-shadow: 5px 5px 5px #aaa;
-    /* margin-top: -35px; */
-    margin-left: 50px;
-}
+  box-shadow: 5px 5px 5px #aaa;
+  /* margin-top: -35px; */
+  margin-left: 50px; }
 
 .iframe {
-    float: right;
-}
+  float: right; }
 
 *.outline-2 p {
-    margin-right: 5px;
-    margin-left: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
-}
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-right: 5px;
+  padding-left: 5px; }
 
 code {
-    font-family: "Droid Sans Mono";
-    background-color: #eeeeee;
-    padding: 2pt;
-    margin-right: 1pt;
-    box-shadow: 1px 1px 1px #aaa;
-}
+  font-family: "Droid Sans Mono";
+  background-color: #eeeeee;
+  padding: 2pt;
+  margin-right: 1pt;
+  box-shadow: 1px 1px 1px #aaa; }
 
 pre {
-    font-family: "Droid Sans Mono";
-    font-size: .8em;
-    font-weight: normal;
-    line-height: 1.4em;
-    background-color: #eeeeee;
-    padding: 2pt;
-    margin-right: 1pt;
-    box-shadow: 1px 1px 1px #aaa;
-}
+  font-family: "Droid Sans Mono";
+  font-size: .8em;
+  font-weight: normal;
+  line-height: 1.4em;
+  background-color: #eeeeee;
+  padding: 2pt;
+  margin-right: 1pt;
+  box-shadow: 1px 1px 1px #aaa; }
 
 #orgquote {
-    z-index: 1000;
-    position: fixed;
-    margin: 0;
-    bottom: 0;
-    right: 0;
-    font-size:100%;
-    padding: 20px;
-    background-color: #eee;
-    -moz-opacity:0;
-    opacity:0;
-    filter:alpha(opacity=0);
-}
+  z-index: 1000;
+  position: fixed;
+  margin: 0;
+  bottom: 0;
+  right: 0;
+  font-size: 100%;
+  padding: 20px;
+  background-color: #eee;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: alpha(opacity=0); }
 
 #orgquote:hover {
-    -moz-opacity:1;
-    opacity:1;
-    filter:alpha(opacity=100);
-}
+  -moz-opacity: 1;
+  opacity: 1;
+  filter: alpha(opacity=100); }
 
-.move { 
-    float: left;
-    font-weight: 800;
-    font-size: 1.3em;
-    color: #ccc;
-    letter-spacing: 1.4pt;
-    background-color: white;
-    box-shadow: 0px 0px 0px white;
-}
+.move {
+  float: left;
+  font-weight: 800;
+  font-size: 1.3em;
+  color: #ccc;
+  letter-spacing: 1.4pt;
+  background-color: white;
+  box-shadow: 0px 0px 0px white; }
 
 .move a {
-    color: #ccc;
-}
+  color: #ccc; }
 
 .move a:hover {
-    color: grey;
-    text-decoration: none;
-}
+  color: grey;
+  text-decoration: none; }
 
-@media(min-width:1000px){
-    #screenshot {
-        float: right;
-        width: 500px;
-    }
-    #main-image {
-        float: right;
-        width: 500px;
-    }
-    body {
-        padding: 20px;
-        margin-left: 50px;
-        margin-right: 30px;
-    }
-}
+@media (min-width: 1000px) {
+  #screenshot {
+    float: right;
+    width: 500px; }
+  #main-image {
+    float: right;
+    width: 500px; }
+  body {
+    padding: 20px;
+    margin-left: 50px;
+    margin-right: 30px; } }
 
-@media(min-width:800px) and (max-width:1000px){
-    #screenshot {
-        float: right;
-        width: 450px;
-    }
-    #main-image {
-        float: right;
-        width: 450px;
-    }
-}
+@media (min-width: 800px) and (max-width: 1000px) {
+  #screenshot {
+    float: right;
+    width: 450px; }
+  #main-image {
+    float: right;
+    width: 450px; } }
 
-@media(min-width:850px) and (max-width:1000px){
-    body {
-        padding: 10px;
-        margin-left: 25px;
-        margin-right: 15px;
-    }
-}
+@media (min-width: 850px) and (max-width: 1000px) {
+  body {
+    padding: 10px;
+    margin-left: 25px;
+    margin-right: 15px; } }
 
-@media(max-width:800px){
-    #screenshot {
-        display: none;
-    }
-    #main-image {
-        display: none;
-    }
-}
+@media (max-width: 800px) {
+  #screenshot {
+    display: none; }
+  #main-image {
+    display: none; } }
 
-@media(max-width:800px){
-    code{
-        font-size: 85%;
-    }
-}
+@media (max-width: 800px) {
+  code {
+    font-size: 85%; } }
 
-@media(min-width:800px) and (max-width:900px){
-    code{
-        font-size: 75%;
-    }
-}
+@media (min-width: 800px) and (max-width: 900px) {
+  code {
+    font-size: 75%; } }
 
-@media(min-width:900px){
-    code{
-        font-size: 85%;
-    }
-}
+@media (min-width: 900px) {
+  code {
+    font-size: 85%; } }
